Bug 145177 - sz does not start download wizard
Summary: sz does not start download wizard
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6.6
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 147332 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-05-08 10:41 UTC by Andreas Schwarz
Modified: 2008-08-13 17:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Fix for decoding escape chars in the middle of block receives properly (403 bytes, patch)
2007-05-08 10:57 UTC, Andreas Schwarz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schwarz 2007-05-08 10:41:34 UTC
Version:           1.6.6 (using KDE KDE 3.5.6)
Installed from:    Gentoo Packages
Compiler:          gcc 4.1.2 
OS:                Linux

When trying to donwload a file from a host using "sz" the proper escape sequence is displayed but the zmodem download dialog does not pop up. Using echo "" | awk ' { printf("\030B00") } ' causes the dialog to display while echo "" | awk ' { printf("**\030B00") } ' does not. 
Debugging showed there is a logical error in TEmulation.cpp function TEmulation::onRcvBlk:
    for(l = i; l < len-1; ++l)
      if ((unsigned char) s[l] < 32)
         break;
causes an escape char in the middle of a string not to be decoded by the main i loop. Correct code should be:
    for(l = i; l < len; l++)
      if ((unsigned char) s[l+1] < 32)
         break;
Comment 1 Andreas Schwarz 2007-05-08 10:57:31 UTC
Created attachment 20509 [details]
Fix for decoding escape chars in the middle of block receives properly
Comment 2 Robert Knight 2007-08-02 07:44:52 UTC
*** Bug 147332 has been marked as a duplicate of this bug. ***
Comment 3 Dariusz Nawrocki 2007-12-29 19:56:10 UTC
*** This bug has been confirmed by popular vote. ***
Comment 4 Dariusz Nawrocki 2007-12-29 20:01:11 UTC
Bug still exists in Konsole 1.6.6 (KDE 3.5.7 "release 72.2" openSUSE 10.3)

"sz" worked in the past KDE releases, but now it does not.
Comment 5 Rex Kerr 2008-01-03 22:36:06 UTC
I have been searching Google for a solution to this problem.  I have found that many people respond with an answer like "use scp, does anybody use ZModem anymore anyhow?"  In case that mindset is influential in the decission to fix this bug I'd like to point out that scp can only make one hop, whereas with SSH I can connect to a computer that has an opening through a firewall, then connect to others that are behind the firewall, then use sz to transfer an individual file, thus it's still very useful.

In the meantime I use zssh, but it's less than ideal for other reasons, one of which is that I have to anticipate its need before I connect and make the multiple hops.
Comment 6 Norman Schmidt 2008-03-07 02:33:12 UTC
I totally agree with Rex Kerr. I use zmodem all the time supporting linux servers thru multi-hop ssh connections, and this bug is keeping me away from konqueror. And I am absolutely sure there are many other in this situation. 
Comment 7 Daniël Mantione 2008-08-08 21:23:25 UTC
Can the posted patch please be committed to the 3.5 branch? I can confirm it works.
Comment 8 Kurt Hindenburg 2008-08-12 17:04:45 UTC
I'm updating my 3.5 branch now.  3.5.10 is suppose to come out this month.  I'll try to get this patch in for that.  I have no way of testing but as long as people using the patch says it works that's fine.
Comment 9 Kurt Hindenburg 2008-08-13 17:50:54 UTC
SVN commit 846506 by hindenburg:

Fix issue with zmodem dialog not popping up.

BUG: 145177


 M  +2 -2      TEmulation.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=846506