Fix issue with zmodem dialog not popping up.

BUG: 145177

svn path=/branches/KDE/3.5/kdebase/konsole/; revision=846506