konsole/TEmulation.cpp
@@ -333,8 +333,8 @@ void TEmulation::onRcvBlock(const char *s, int len)
     }
 
     // Otherwise, bulk decode until the next control code
-    for(l = i; l < len-1; ++l)
-      if ((unsigned char) s[l] < 32)
+    for(l = i; l < len; l++)
+      if ((unsigned char) s[l+1] < 32)
          break;
 
     r = decoder->toUnicode(&s[i],l-i+1);
